crates/es-fluent-cli/tests/snapshots/cli_tests__generate_file_namespace.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_generate_file_namespace_test()
---
STDOUT:
Fluent FTL Generator
Discovered 2 crate(s)
test-app-a generated in [DURATION] (7 resources)
test-lib-b generated in [DURATION] (1 resources)

STDERR:
