crates/es-fluent-cli/tests/snapshots/cli_tests__sync_all.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
assertion_line: 600
expression: output
---
STDOUT:
Fluent FTL Sync
Added 8 key(s) to en-US
  -> z_last
  -> hello_a
  -> orphan_key
  -> shared-Photos
  -> gender-Male
  -> gender-Female
  -> gender-Other
  -> new-key
Added 5 key(s) to es
  -> shared-Photos
  -> gender-Male
  -> gender-Female
  -> gender-Other
  -> new-key
Added 8 key(s) to es-ES
  -> z_last
  -> hello_a
  -> orphan_key
  -> shared-Photos
  -> gender-Male
  -> gender-Female
  -> gender-Other
  -> new-key
Added 8 key(s) to fr
  -> z_last
  -> hello_a
  -> orphan_key
  -> shared-Photos
  -> gender-Male
  -> gender-Female
  -> gender-Other
  -> new-key
Added 8 key(s) to fr-FR
  -> z_last
  -> hello_a
  -> orphan_key
  -> shared-Photos
  -> gender-Male
  -> gender-Female
  -> gender-Other
  -> new-key
Added 1 key(s) to en-US
  -> hello_b
Added 1 key(s) to es-ES
  -> hello_b
Added 1 key(s) to fr
  -> hello_b
Added 1 key(s) to fr-FR
  -> hello_b
Done: 41 key(s) synced to 9 locale(s)

STDERR:
