crates/es-fluent-cli/tests/snapshots/cli_tests__sync_locales.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output
---
STDOUT:
Fluent FTL Sync
Added 4 key(s) to es
  -> shared-Photos
  -> gender-Male
  -> gender-Female
  -> gender-Other
Done: 4 key(s) synced to 1 locale(s)

STDERR:
